# dream-team-iii

./: .Start.hs.swp  .gitignore  .meeting-notes.txt.swp  Adam_SATEnv.hs  README.md  SATEnv.hs  SATList.hs  Start.hs  Test_Environ.hs  making_my_way_downtown.txt  meeting-notes.txt  notes.txt  ramyDumbSATEnv.hs  t.hs  usage.txt
asteroid/: .ghci  Makefile  README  asteroid.cabal  cabal.sandbox.config  test.hs  unicode-input-codes.txt
asteroid/docs/: Lib-Core.html  asteroid.haddock  doc-index.html  index.html
asteroid/src/: .Main.hs.swp  Asteroid.hs  Lib.hs  Main.hs
asteroid/src/Lang/: JSDP.hs  JSDPC.hs  MES.hs
asteroid/src/Lang/JSDP/: .Equivalence.hs.swp  .SATSemantics.hs.swp  .Syntax.hs.swp  AST.hs  Equivalence.hs  Parse.hs  Pretty.hs  SATSemantics.hs  Syntax.hs
asteroid/src/Lang/JSDPC/: Equivalence.hs  SATSemantics.hs  Syntax.hs
asteroid/src/Lang/MES/: AST.hs  Equivalence-left-off-here.hs  Equivalence.hs  Syntax.hs
asteroid/src/Lib/: .Core.hs.swp  Core.hs
docs/: Asteroid.html  Lang-JSDP-Syntax.html  Lang-JSDP.html  Lib.html
docs/asteroid/: Asteroid.html  Lang-JSDP-Equivalence.html  Lang-JSDP-SATSemantics.html  Lang-JSDP-Syntax.html  Lang-JSDP.html  Lib-Core.html  Lib.html  Main.html  asteroid.haddock  doc-index-35.html  doc-index-36.html  doc-index-58.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index.html  index.html
ramy/: SATEnv.hs  SATList.hs
