name: asteroid
version: 0.0.0.1
build-type: Simple
category: Languages
maintainer: David.Darais@uvm.edu
cabal-version: >= 2.0
license: BSD3

library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: 
    -isrc 
    -Wall 
    -fno-warn-orphans
  build-depends: 
      base == 4.10.*
    , text == 1.2.*
  exposed-modules:
    Asteroid
    Lang.JSDP
    Lang.JSDP.AST
    Lib
    Lib.Core
  default-extensions:
    -- ConstraintKinds
    -- DataKinds
    -- EmptyCase
    -- EmptyDataDecls
    -- ExplicitNamespaces
    -- FlexibleContexts
    -- FlexibleInstances
    -- FunctionalDependencies
    -- GADTs
    -- GeneralizedNewtypeDeriving
    InstanceSigs
    -- KindSignatures
    -- LambdaCase
    -- MagicHash
    MultiParamTypeClasses
    NoImplicitPrelude
    -- OverloadedStrings
    -- PartialTypeSignatures
    -- PolyKinds
    -- PostfixOperators
    -- RankNTypes
    -- RebindableSyntax
    ScopedTypeVariables
    -- StandaloneDeriving
    Strict
    StrictData
    -- TemplateHaskell
    -- TupleSections
    -- TypeApplications
    -- TypeFamilies
    -- TypeOperators
    -- TypeSynonymInstances
    -- UnboxedTuples
    -- UndecidableInstances
    -- UndecidableSuperClasses
    UnicodeSyntax
    -- ViewPatterns
