name: asteroid
version: 0.0.0.1
build-type: Simple
category: Languages
maintainer: David.Darais@uvm.edu
cabal-version: >= 2.0
license: BSD3

executable asteroid
  default-language: Haskell2010
  hs-source-dirs: src
  main-is: Main.hs
  ghc-options: 
    -isrc 
    -Wall 
    -fno-warn-orphans
  build-depends: 
      base       == 4.10.*
    , text       == 1.2.*
    , containers == 0.5.*
  exposed-modules:
    Asteroid
    Lang.JSDP
    Lang.JSDP.Equivalence
    Lang.JSDP.Parse
    Lang.JSDP.Pretty
    Lang.JSDP.SATSemantics
    Lang.JSDP.Syntax
    Lib
    Lib.Core
  default-extensions:
    -- ConstraintKinds
    -- DataKinds
    -- EmptyCase
    -- EmptyDataDecls
    -- ExplicitNamespaces
    -- FlexibleContexts
    -- FlexibleInstances
    -- FunctionalDependencies
    -- GADTs
    -- GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    -- LambdaCase
    -- MagicHash
    MultiParamTypeClasses
    NoImplicitPrelude
    OverloadedStrings
    -- PartialTypeSignatures
    -- PolyKinds
    -- PostfixOperators
    -- RankNTypes
    RebindableSyntax
    ScopedTypeVariables
    -- StandaloneDeriving
    Strict
    StrictData
    -- TemplateHaskell
    -- TupleSections
    -- TypeApplications
    -- TypeFamilies
    TypeOperators
    -- TypeSynonymInstances
    -- UnboxedTuples
    -- UndecidableInstances
    -- UndecidableSuperClasses
    UnicodeSyntax
    -- ViewPatterns

